jcmd VM.metaspace should report unlimited size if MaxMetaspaceSize isn't specified

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 17
    • Affects Version/s: 17
    • Component/s: hotspot
    • None
    • b12

      When MaxMetaspaceSize is not specified, it would set to max_uintx, jcmd VM.metaspace reports metaspace summary information as follows:

      $ ./jcmd <pid> VM.metaspace | grep MaxMetaspaceSize
      MaxMetaspaceSize: 17179869184.00 GB

      Actually this is a bug, the expected output should be:

      MaxMetaspaceSize: unlimited

      The root cause of the problem is that the MaxMetaspaceSize rounding performed during arguments parsing is inconsistent with the rounding check in print_settings(metaspaceRerporter.cpp).

            Assignee:
            David Holmes
            Reporter:
            Denghui Dong
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: