8262099: jcmd VM.metaspace should report unlimited size if MaxMetaspaceSize isn't specified

Reviewed-by: stuefe, lucy